Styles the Front page

--- a/themes/stepstyle/parts/footer.html
+++ b/themes/stepstyle/parts/footer.html
@@ -1,3 +1,12 @@
-<footer>
-    <p>&copy; 2025 My Store. All rights reserved.</p>
-  </footer>
+<!-- wp:group {"align":"full","layout":{"inherit":true}} -->
+<header class="site-header">
+  <div class="container">
+      <div class="logo">
+          <!-- wp:site-logo /-->
+      </div>
+      <nav class="main-navigation">
+          <!-- wp:navigation {"overlayMenu":"always"} /-->
+      </nav>
+  </div>
+</header>
+<!-- /wp:group -->
