--- a/themes/stepstyle/parts/header.html
+++ b/themes/stepstyle/parts/header.html
@@ -1,10 +1,12 @@
-<header>
-    <div class="site-logo">My Shop</div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-        </ul>
-    </nav>
+<!-- wp:group {"align":"full","layout":{"inherit":true}} -->
+<header class="site-header">
+    <div class="container">
+        <div class="logo">
+            <!-- wp:site-logo /-->
+        </div>
+        <nav class="main-navigation">
+            <!-- wp:navigation {"overlayMenu":"always"} /-->
+        </nav>
+    </div>
 </header>
+<!-- /wp:group -->
